# public-geospatial-qa-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: queries-naive.json  queries.json  response_templates.json  sysprompt.txt  tool_schemas.json
reports/: corpus-2026-06-04-aggregate.md
scripts/: build_calc_preset.py  run_corpus_in_browser.py
src/public_geospatial_qa_agent/: __init__.py  archetypes.py  cli.py  corpus.py  cost.py  instrumentation.py  runner.py  state.py  tools.py
src/public_geospatial_qa_agent/backends/: __init__.py  canned.py  live.py  protocol.py
src/public_geospatial_qa_agent/web/: __init__.py  app.py  budget.py
src/public_geospatial_qa_agent/web/static/: app.css  app.js  index.html
tests/: test_smoke.py
